# dtexconvert

./: AUTHORS  INSTALL  README  configure.ac
src/: Makefile.am  dsoInterface.cpp  dsoInterface.h  dtexInterface.cpp  dtexInterface.h  main.cpp
